--- a/system-apps/system-settings-preferences/webClient/src/app/app.component.html
+++ b/system-apps/system-settings-preferences/webClient/src/app/app.component.html
@@ -8,6 +8,8 @@
   Copyright Contributors to the Zowe Project.
 -->
 
+<!-- Here is where module switching code will go. After more Settings options become available, 
+     the desired component will display based on what the user chose in the Personalization panel. -->
 <language-component></language-component>
 
 <!-- 
