--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-widget/launchbar-widget.component.css
@@ -16,6 +16,7 @@
   bottom: 0;
   right: 0;
   width: fit-content;
+  min-width: 185px; /* fit-content seems to fail at times with Safari, min-width here as a safety */
   height: 60px;
   z-index: 7;
   color: #eee;
