--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization-panel.component.css
@@ -13,7 +13,8 @@
 .personalization-panel {
   width: 100%;
   height: 100%;
-  background: #171824f2;
+  background: black; /* Alpha transparency colors do not work in MS Edge, so opacity must be set */
+  opacity: 0.9;
   position: absolute;
   z-index: 5000; /* Set to 5000 so panel stacks on top of windows, 
   but does not take precendence over launchbar UI (6000+ z-index) */
