--- a/virtual-desktop/src/assets/css/desktop.css
+++ b/virtual-desktop/src/assets/css/desktop.css
@@ -38,7 +38,7 @@ html:fullscreen {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-size: 14px;
   line-height: 1.42857143;
   color: #333;
@@ -305,7 +305,7 @@ body {
   color: white;
   background-color: #3c7299;
   width: 100%;
-  font-family: 'Roboto';
+  font-family: 'Roboto', sans-serif;
   font-size: 13px;
   font-weight: 400;
   display: inline-block;
