Reorganized logic around subscription for less lookup
Signed-off-by: 1000TurquoisePogs <sgrady@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.html
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-icon/launchbar-icon.component.html
@@ -13,10 +13,10 @@
 <zowe-launchbar-instance-view class="instance" *ngIf="launchbarItem.showInstanceView" [launchbarItem]="launchbarItem" (mouseenter)="onMouseEnterInstanceView($event)" (mouseleave)="onMouseLeaveInstanceView($event)"></zowe-launchbar-instance-view>
 <p *ngIf="launchbarItem.showIconLabel" class="launchbar-caption truncate">{{launchbarItem.label}}</p>
 <div class="launchbar-icon-image" (mouseenter)="onMouseEnter($event)" (mouseleave)="onMouseLeave($event)" [title]="launchbarItem.label" [style.background-image]="launchbarItem.image == null ? undefined : launchbarItem.image | cssUrl">
-  <div class="launchbar-icon-marker-dots" *ngIf="launchbarItem.instanceCount <= 5">
+  <div class="launchbar-icon-marker-dots" *ngIf="launchbarItem.instanceIds.length <= 5">
     <div class="launchbar-icon-marker-dot" *ngFor="let i of launchbarItem.instanceIdArray"></div>
   </div>
-  <div class="launchbar-icon-marker-dots" *ngIf="launchbarItem.instanceCount > 5">
+  <div class="launchbar-icon-marker-dots" *ngIf="launchbarItem.instanceIds.length > 5">
     <div class="launchbar-icon-marker-dot"></div> <!-- 5 dots, plus a + symbol -->
     <div class="launchbar-icon-marker-dot"></div>
     <div class="launchbar-icon-marker-dot"></div>
