--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/window/window.component.css
@@ -98,6 +98,8 @@
   position: absolute;
   padding-left:83px;
   padding-right:83px;
+  padding-top: 10px;
+  top: 0px;
   left: 0px;
   right: 0px;
   height: 100%;
