--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.css
@@ -12,9 +12,8 @@
 
 .instance-item {
     width: 200px;
-    height: 120px;
-    margin-left: 3px;
-    margin-right: 3px;
+    height: 140px;
+    margin: 3px;
 }
 
 .instance-viewer {
