Making things neater
Signed-off-by: Leanid Astrakou <lastrakou@rocketsoftware.com>

--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/launchbar/launchbar-instance-view/launchbar-instance-view.component.css
@@ -50,6 +50,11 @@
     margin-top: -10px;
 }
 
+.instance-preview-caption {
+    font-size: large; 
+    padding-top: 1rem;
+}
+
 .instance-snapshot:hover .instance-preview {
     opacity: 0.5;
 }
