--- a/virtual-desktop/src/app/authentication-manager/login/login.component.css
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.css
@@ -24,16 +24,22 @@
   bottom: 0;
   left: 0;
   right: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   margin: 0 auto;
 
   text-align: center;
   background: white;
+
 
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
+.login-overlay>div {
 .login-overlay>div {
   background: white;
   overflow-x: hidden;
@@ -49,11 +55,7 @@
   height: 100%;
   top: 0;
   left: 0;
-<<<<<<< HEAD
   background: url("assets/images/background.jpg") no-repeat center/cover;
-=======
-  background: url("/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/background.jpg") no-repeat center/cover;
->>>>>>> a5805ca (version update to Angular 18 and relevant changes)
 }
 
 .login-panel.hidden {
@@ -123,34 +125,22 @@
   display: inline-block;
   width: 76px;
   height: 76px;
-<<<<<<< HEAD
   background-image: url('assets/images/login/login-btn-normal.png');
-=======
-  background-image: url('/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/login/login-btn-normal.png');
->>>>>>> a5805ca (version update to Angular 18 and relevant changes)
   background-position: center center;
   background-repeat: no-repeat;
 }
 
-<<<<<<< HEAD
 .login-button>.login-button-icon:hover {
   background-image: url('assets/images/login/login-btn-hover.png');
 }
 
 .login-button>.login-button-icon:active {
   background-image: url('assets/images/login/login-btn-pressed.png');
-=======
-.login-button > .login-button-icon:hover {
-  background-image: url('/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/login/login-btn-hover.png');
-}
-
-.login-button > .login-button-icon:active {
-  background-image: url('/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/login/login-btn-pressed.png');
->>>>>>> a5805ca (version update to Angular 18 and relevant changes)
 }
 
 .login-button:disabled {
   opacity: 0.3;
+  filter: grayscale(100%);
   filter: grayscale(100%);
 }
 
