--- a/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.css
+++ b/virtual-desktop/src/app/window-manager/mvd-window-manager/personalization-panel/personalization/personalization.component.css
@@ -13,6 +13,7 @@
   padding: 5px;
   width: 100%;
   color: #f3f4f4;
+  color: #f3f4f4;
   padding-top: 15px;
 }
 
@@ -64,7 +65,6 @@
   border: 2px solid white;
 }
 
-<<<<<<< HEAD
 .personalization-preview-item.preview-small {
   background-image: url('assets/images/personalization/preview-1.png');
 }
@@ -75,18 +75,6 @@
 
 .personalization-preview-item.preview-large {
   background-image: url('assets/images/personalization/preview-3.png');
-=======
-.personalization-preview-item.preview-small{
-  background-image: url('/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/personalization/preview-1.png');
-}
-
-.personalization-preview-item.preview-medium{
-  background-image: url('/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/personalization/preview-2.png');
-}
-
-.personalization-preview-item.preview-large{
-  background-image: url('/ZLUX/plugins/org.zowe.zlux.ng2desktop/web/assets/images/personalization/preview-3.png');
->>>>>>> a5805ca (version update to Angular 18 and relevant changes)
   margin-right: 0px;
 }
 
@@ -114,6 +102,7 @@
 
 .personalization-file-drop-content {
   display: flex !important;
+  display: flex !important;
   align-items: center !important;
   justify-content: center !important;
   height: 100px !important;
@@ -132,6 +121,7 @@
 }
 
 .personalization-circle.selected {
+.personalization-circle.selected {
   border: 2px solid white;
   border-radius: 30px;
   width: 44px;
@@ -143,6 +133,7 @@
   height: 14px;
 }
 
+.personalization-swatch.selected {
 .personalization-swatch.selected {
   border: 2px solid white;
   height: 16px;
@@ -172,6 +163,7 @@
   grid-column-start: 5;
   grid-column-end: 6;
 }
+
 
 /*
   This program and the accompanying materials are
