Add v2 in maintenance message to login screen
Signed-off-by: Timothy Gerstel <tim.gerstel@gmail.com>

--- a/virtual-desktop/src/app/authentication-manager/login/login.component.html
+++ b/virtual-desktop/src/app/authentication-manager/login/login.component.html
@@ -69,6 +69,7 @@
       </button>
     </div>
   </div>
+  <p class="login-plugin-version" id="v2_maintenance_message">The Version 2 Desktop is now in maintenance status for the duration of the Zowe Version 2 maintenance schedule.</p>
   <span class="login-plugin-version" id="ZAP_LoginPage_Version">{{getPluginVersion()}}</span>
   </div>
 </div>
