--- a/system-apps/app-prop-viewer/webClient/src/app/app.component.html
+++ b/system-apps/app-prop-viewer/webClient/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <!-- 
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
@@ -8,37 +7,41 @@
   
   Copyright Contributors to the Zowe Project.
 -->
-<div class="viewer" *ngIf=isViewerWindow>
+@if(isViewerWindow){
+<div class="viewer">
   TO VIEW ALL INSTALLED APPs
 </div>
+}
 
-<div class="window" *ngIf=isPropertyWindow>
-  
+@if(isPropertyWindow){
+<div class="window">
+
   <!-- Window body -->
-  
+
   <div id="row" class="content">
     <div id="column1" class="icon" [style.background-image]="iconImage == null ? undefined : iconImage| cssUrl">
     </div>
-      <div id="column2" >
+    <div id="column2">
       <p class="app-name">
-       {{appName}}
+        {{appName}}
       </p>
       <p class="app-value">
         <span class="constant">App Version</span>: {{appVersion}}
-      </p> 
+      </p>
       <p class="app-value">
         <span class="constant">App ID</span>: {{appId}}
-      </p> 
+      </p>
       <p class="app-value">
         <span class="constant">App Type</span>: {{appType}}
       </p>
-       </div> 
+    </div>
   </div>
-      <hr>
-    <p class="copyright">
-       {{copyright}}
-      </p>
+  <hr>
+  <p class="copyright">
+    {{copyright}}
+  </p>
 </div>
+}
 <!-- 
   This program and the accompanying materials are
   made available under the terms of the Eclipse Public License v2.0 which accompanies
